--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<div class="inner">
 
 						<header>
-							<h2>Osborn Denture Clinic & Lab</h2>
+							<h2>Osborn Denture Clinic & Lab - Test Deploy</h2>
 						</header>
 						<p>Joseph P. Osborn L.D.
 						<br />
