--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 							height="45pt">  
 						</a>
 					</h1>
+
+					<h1> Test Deploy </h1>
 					
 				</header>
 
@@ -25,7 +27,7 @@
 					<div class="inner">
 
 						<header>
-							<h2>Osborn Denture Clinic & Lab - Test Deploy</h2>
+							<h2>Osborn Denture Clinic & Lab</h2>
 						</header>
 						<p>Joseph P. Osborn L.D.
 						<br />
