Adding SEO Keywords

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en-US">
 	<head>
+		<meta charset="utf-8">
+		<meta name="description" content="Osborn Denture Clinic & Lab is the dental practice of Joe Osborn L.D. Have dedicated over 15 years to the field of dental technology at the forefront of advancements and innovations within the Denturism profession. His father, Dave Osborn, C.D.T. (retired), acquired his skills in the military and brought more than 30 years of extensive industry expertise to the practice. Osborn Denture Clinic adheres to the highest standards of quality and are deeply committed to delivering exceptional care and service to each individual.">
+		<meta name="keywords" content="Osborn, Denture, Clinic, Lab, Dental, Denturism, Spokane">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		
 		<title>Osborn Denture Clinic</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<meta property="og:url" content="https://www.https://osborndentureclinic.com/">
+		<meta property="og:site_name" content="Osborn Denture Clinic">
+		<meta property="og:title" content="Osborn Denture Clinic">
+		<meta property="og:type" content="website">
+		<meta property="og:image:alt" content="Osborn Denture Clinic">
+		<meta property="og: locale" content="en-US">
+		
+		<meta property="twitter:card" content="summary">
+		<meta property="twitter:title" content="Osborn Denture Clinic">
+		<meta property="twitter:description" content="Osborn Denture Clinic & Lab is the dental practice of Joe Osborn L.D. Have dedicated over 15 years to the field of dental technology at the forefront of advancements and innovations within the Denturism profession. His father, Dave Osborn, C.D.T. (retired), acquired his skills in the military and brought more than 30 years of extensive industry expertise to the practice. Osborn Denture Clinic adheres to the highest standards of quality and are deeply committed to delivering exceptional care and service to each individual.">
+		<meta property="twitter:image:alt" content="Osborn Denture Clinic">
+
+		<link rel="stylesheet" href="assets/css/main.css">
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
 	</head>
 	<body class="index is-preload">
 		<div id="page-wrapper">
