Resizing Logo and adding logo img [alt] attributes.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 				<header id="header" class="alt">
 					<h1 id="logo">
 						<a href="index.html">
-							<img src="images/osborn-denture-clinic-high-resolution-logo-black-transparent.png" 
-							height="45pt">  
+							<img src="images/osborn-denture-clinic-high-resolution-logo-black-transparent-45pxh.png" 
+								alt="Osborn Denture Clinic Logo">  
 						</a>
 					</h1>
 				</header>
