Replacing tooth removing unused code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 		<meta property="twitter:image:alt" content="Osborn Denture Clinic">
 
 		<link rel="stylesheet" href="assets/css/main.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
 	</head>
 	<body class="index is-preload">
 		<div id="page-wrapper">
@@ -57,7 +56,8 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon solid fa-tooth"></span>
+						<!-- <span class="icon solid fa-tooth"></span> -->
+						<span class="icon"><img src="images/tooth-solid-70.svg"></span>
 						<h2>Exceeding your expectations  
 						<br />
 						one <strong>smile</strong> at a time</h2>
