Adding tooth icon [alt] attribute

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 					<header class="special container">
 						<!-- <span class="icon solid fa-tooth"></span> -->
-						<span class="icon"><img src="images/tooth-solid-70.svg"></span>
+						<span class="icon"><img src="images/tooth-solid-70.svg" alt="A tooth icon"></span>
 						<h2>Exceeding your expectations  
 						<br />
 						one <strong>smile</strong> at a time</h2>
