--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<meta property="twitter:image:alt" content="Osborn Denture Clinic">
 
 		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 	</head>
 	<body class="index is-preload">
 		<div id="page-wrapper">
